cambio descripcion index

--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,9 @@
 
   <title>For The Music Lovers</title>
   <meta name="description"
-    content="The starting point for your next project with Minimal UI Kit, built on the newest version of Material-UI ©, ready to be customized to your style" />
-  <meta name="keywords" content="react,material,kit,application,dashboard,admin,template" />
-  <meta name="author" content="Minimal UI Kit" />
+    content="Descubrí y compartí la mejor música en vivo en bares locales." />
+  <meta name="keywords" content="musica,jazz,eventos,bares,fiesta" />
+  <meta name="author" content="Equipo 07" />
 </head>
 
 <body>
