--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   <!-- Css simplebar -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplebar/5.3.9/simplebar.min.css" />
 
-  <title>For The Music Lovers</title>
+  <title>Banco Galicia</title>
   <meta name="description"
     content="Descubrí y compartí la mejor música en vivo en bares locales." />
   <meta name="keywords" content="musica,jazz,eventos,bares,fiesta" />
